rosmongolog_trimesh: C++ logger for TriangleMesh

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,3 +21,4 @@ link_libraries(mongoclient)
 rosbuild_add_executable(rosmongolog_tf src/rosmongolog_tf.cpp)
 rosbuild_add_executable(rosmongolog_pcl src/rosmongolog_pcl.cpp)
 rosbuild_add_executable(rosmongolog_cimg src/rosmongolog_cimg.cpp)
+rosbuild_add_executable(rosmongolog_trimesh src/rosmongolog_trimesh.cpp)
