--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,12 +20,12 @@ set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
 #rosbuild_gensrv()
 
 link_libraries(mongoclient)
-rosbuild_add_executable(mongolog_tf src/mongolog_tf.cpp)
-rosbuild_add_executable(mongolog_pcl src/mongolog_pcl.cpp)
-rosbuild_add_executable(mongolog_cimg src/mongolog_cimg.cpp)
-# rosbuild_add_executable(rosmongolog_trimesh src/rosmongolog_trimesh.cpp)
-rosbuild_link_boost(mongolog_cimg system)
-rosbuild_link_boost(mongolog_pcl system)
-rosbuild_link_boost(mongolog_tf system)
-#rosbuild_link_boost(mongolog_trimesh system)
+rosbuild_add_executable(mongodb_log_tf src/mongodb_log_tf.cpp)
+rosbuild_add_executable(mongodb_log_pcl src/mongodb_log_pcl.cpp)
+rosbuild_add_executable(mongodb_log_cimg src/mongodb_log_cimg.cpp)
+# rosbuild_add_executable(rosmongodb_log_trimesh src/rosmongodb_log_trimesh.cpp)
+rosbuild_link_boost(mongodb_log_cimg system)
+rosbuild_link_boost(mongodb_log_pcl system)
+rosbuild_link_boost(mongodb_log_tf system)
+#rosbuild_link_boost(mongodb_log_trimesh system)
 
