benchmark: tool to produce TF messages for benchmarking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,6 +23,7 @@ link_libraries(mongoclient)
 rosbuild_add_executable(mongodb_log_tf src/mongodb_log_tf.cpp)
 rosbuild_add_executable(mongodb_log_pcl src/mongodb_log_pcl.cpp)
 rosbuild_add_executable(mongodb_log_cimg src/mongodb_log_cimg.cpp)
+rosbuild_add_executable(benchmark_produce_tf src/benchmark/produce_tf.cpp)
 # rosbuild_add_executable(rosmongodb_log_trimesh src/rosmongodb_log_trimesh.cpp)
 rosbuild_link_boost(mongodb_log_cimg system)
 rosbuild_link_boost(mongodb_log_pcl system)
