mongodb_log: find node relative to package
Instead of using hardcoded paths for the specific C++ logger binaries
use roslib's find_node to detect it anywhere in the ROS package path.
This enables mongodb_log to be started using rosrun and launch files.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 *~
 *.pyc
+*.rrd
+*.png
 /build*
 /ROS_NOBUILD
-/bin/*.rrd
-/bin/*.png
 /bin/mongodb_log_tf
 /bin/mongodb_log_pcl
 /bin/mongodb_log_cimg
