Adding an insert service and the start of a message store to provide it.

--- a/ros_datacentre/package.xml
+++ b/ros_datacentre/package.xml
@@ -12,16 +12,18 @@
   <license>GPL</license>
 
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>std_srvs</build_depend>
   <build_depend>message_generation</build_depend>
+  <build_depend>ros_datacentre_msgs</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>python-pymongo</run_depend>
-
+  <run_depend>ros_datacentre_msgs</run_depend>
 
 
   <export>
