Service code runs (not working though)

--- a/ros_datacentre_msgs/package.xml
+++ b/ros_datacentre_msgs/package.xml
@@ -19,5 +19,6 @@
   <build_depend>message_generation</build_depend>
 
   <run_depend>message_runtime</run_depend>
+   <run_depend>message_generation</run_depend>
 
 </package>
