--- a/ros_datacentre_msgs/CMakeLists.txt
+++ b/ros_datacentre_msgs/CMakeLists.txt
@@ -11,6 +11,8 @@ add_message_files(
 add_service_files(
   FILES
   MongoInsertMsg.srv
+  MongoQueryMsg.srv
+  MongoQueryID.srv
 )
 
 generate_messages()
