--- a/mongodb_log/package.xml
+++ b/mongodb_log/package.xml
@@ -47,13 +47,15 @@
   <build_depend>rostopic</build_depend>
   <build_depend>tf</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>mongodb-dev</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>roslib</run_depend>
   <run_depend>rosgraph</run_depend>
-  <run_depend>rostopic</run_depend>
+  <run_depend>rostopic</run_depend>  
   <run_depend>tf</run_depend>
   <run_depend>sensor_msgs</run_depend>
+  <run_depend>mongodb-dev</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
