--- a/strands_diagnostics/package.xml
+++ b/strands_diagnostics/package.xml
@@ -11,10 +11,10 @@
 
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>rospy</build_depend>
-  <build_depend>strands_datacentre</build_depend>
+  <build_depend>ros_datacentre</build_depend>
   <build_depend>rosgraph_msgs</build_depend>
   <run_depend>rospy</run_depend>
-  <run_depend>strands_datacentre</run_depend>
+  <run_depend>ros_datacentre</run_depend>
   <run_depend>rosgraph_msgs</run_depend>
 
 </package>
