--- a/mongodb_log/CMakeLists.txt
+++ b/mongodb_log/CMakeLists.txt
@@ -7,7 +7,7 @@ project(mongodb_log)
 find_package(catkin REQUIRED rospy roslib rosgraph rostopic tf sensor_msgs)
 
 ## System dependencies are found with CMake's conventions
-find_package(Boost REQUIRED COMPONENTS system thread)
+find_package(Boost REQUIRED COMPONENTS system thread filesystem)
 
 
 ## Uncomment this if the package has a setup.py. This macro ensures
