Added update message type.

--- a/ros_datacentre_msgs/CMakeLists.txt
+++ b/ros_datacentre_msgs/CMakeLists.txt
@@ -13,6 +13,7 @@ add_message_files(
 add_service_files(
   FILES
   MongoInsertMsg.srv
+  MongoUpdateMsg.srv
   MongoQueryMsg.srv
   MongoQueryID.srv
 )
