Adds a service to delete message by ID

--- a/ros_datacentre_msgs/CMakeLists.txt
+++ b/ros_datacentre_msgs/CMakeLists.txt
@@ -15,6 +15,7 @@ add_service_files(
   MongoInsertMsg.srv
   MongoUpdateMsg.srv
   MongoQueryMsg.srv
+  MongoDeleteMsg.srv
 )
 
 generate_messages()
