--- a/ros_datacentre_cpp_client/CMakeLists.txt
+++ b/ros_datacentre_cpp_client/CMakeLists.txt
@@ -104,13 +104,21 @@ include_directories(
 
 ## Declare a cpp executable
 add_executable(example_ros_datacentre_cpp_client include/ros_datacentre/message_store.cpp src/example_ros_datacentre_cpp_client.cpp )
+add_library(example_ros_datacentre_cpp_client_lib include/ros_datacentre/message_store.cpp )
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-add_dependencies(example_ros_datacentre_cpp_client include/ros_datacentre/message_store.cpp ros_datacentre_msgs_generate_messages_cpp )
+add_dependencies(example_ros_datacentre_cpp_client ros_datacentre_msgs_generate_messages_cpp )
+add_dependencies(example_ros_datacentre_cpp_client_lib ros_datacentre_msgs_generate_messages_cpp )
 
 # Specify libraries to link a library or executable target against
 target_link_libraries(example_ros_datacentre_cpp_client
+  mongoclient
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
+
+target_link_libraries(example_ros_datacentre_cpp_client_lib
   mongoclient
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
