--- a/ros_datacentre_cpp_client/CMakeLists.txt
+++ b/ros_datacentre_cpp_client/CMakeLists.txt
@@ -8,6 +8,7 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   geometry_msgs
   ros_datacentre_msgs
+  pcl_ros
 )
 
 ## System dependencies are found with CMake's conventions
@@ -106,6 +107,9 @@ include_directories(
 add_executable(example_ros_datacentre_cpp_client src/example_ros_datacentre_cpp_client.cpp )
 add_library(message_store src/message_store.cpp )
 
+add_executable(pc_test src/point_cloud_test.cpp)
+
+
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 add_dependencies(example_ros_datacentre_cpp_client ros_datacentre_msgs_generate_messages_cpp )
@@ -125,6 +129,11 @@ target_link_libraries(example_ros_datacentre_cpp_client
   ${Boost_LIBRARIES}
 )
 
+target_link_libraries(pc_test
+  mongoclient
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
 
 catkin_add_gtest(ros_datacentre_cpp_test tests/ros_datacentre_cpp_test.cpp)
 target_link_libraries(ros_datacentre_cpp_test
@@ -148,7 +157,7 @@ target_link_libraries(ros_datacentre_cpp_test
 # )
 
 ## Mark executables and/or libraries for installation
-install(TARGETS example_ros_datacentre_cpp_client
+install(TARGETS example_ros_datacentre_cpp_client pc_test
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
