Added cpp example of logging multiple messages together.

--- a/ros_datacentre_cpp_client/CMakeLists.txt
+++ b/ros_datacentre_cpp_client/CMakeLists.txt
@@ -103,18 +103,26 @@ include_directories(
 #   src/${PROJECT_NAME}/ros_datacentre_cpp_client.cpp
 # )
 
-## Declare a cpp executable
+# Declare a cpp executable
 add_executable(example_ros_datacentre_cpp_client src/example_ros_datacentre_cpp_client.cpp)
-
+add_executable(example_multi_event_log src/example_multi_event_log.cpp)
 # add_executable(pc_test src/point_cloud_test.cpp)
 
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 add_dependencies(example_ros_datacentre_cpp_client ros_datacentre_msgs_generate_messages_cpp)
+add_dependencies(example_multi_event_log ros_datacentre_msgs_generate_messages_cpp)
+
 
 # Specify libraries to link a library or executable target against
 target_link_libraries(example_ros_datacentre_cpp_client
+  mongoclient
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+)
+
+target_link_libraries(example_multi_event_log
   mongoclient
   ${catkin_LIBRARIES}
   ${Boost_LIBRARIES}
@@ -148,7 +156,7 @@ target_link_libraries(ros_datacentre_cpp_test
 # )
 
 ## Mark executables and/or libraries for installation
-install(TARGETS example_ros_datacentre_cpp_client #pc_test
+install(TARGETS example_ros_datacentre_cpp_client example_multi_event_log #pc_test
   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
