--- a/ros_datacentre_cpp_client/package.xml
+++ b/ros_datacentre_cpp_client/package.xml
@@ -43,10 +43,12 @@
   <build_depend>roscpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>ros_datacentre_msgs</build_depend>
-  <build_depend>pcl_ros</build_depend>
+  <build_depend>std_msgs</build_depend>
+  <!-- <build_depend>pcl_ros</build_depend> -->
   <run_depend>geometry_msgs</run_depend>
   <run_depend>ros_datacentre_msgs</run_depend>
-  <run_depend>pcl_ros</run_depend>
+  <!-- <run_depend>pcl_ros</run_depend> -->
+  <run_depend>std_msgs</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
