Added dump and restore.

--- a/ros_datacentre/backup_config.yaml
+++ b/ros_datacentre/backup_config.yaml
@@ -1,1 +1,2 @@
-ros_datacentre_extras: [["localhost", 62344], ["localhost", 62333]]
+# ros_datacentre_extras: [["localhost", 62344], ["localhost", 62333]]
+ros_datacentre_extras: [["localhost", 62333]]
