--- a/ros_datacentre_msgs/package.xml
+++ b/ros_datacentre_msgs/package.xml
@@ -21,4 +21,10 @@
   <run_depend>message_runtime</run_depend>
    <run_depend>message_generation</run_depend>
 
+<build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+
+<run_depend>actionlib_msgs</run_depend>
+  <run_depend>actionlib</run_depend>
+  
 </package>
