Changed collections type to StringList to allow for datacentre comms to task schduler.

--- a/ros_datacentre_msgs/CMakeLists.txt
+++ b/ros_datacentre_msgs/CMakeLists.txt
@@ -5,6 +5,7 @@ find_package(catkin REQUIRED COMPONENTS message_generation actionlib actionlib_m
 
 add_message_files(
   FILES
+  StringList.msg
   StringPair.msg
   StringPairList.msg
   SerialisedMessage.msg
