--- a/ros_datacentre/package.xml
+++ b/ros_datacentre/package.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0"?>
 <package>
   <name>ros_datacentre</name>
-  <version>0.0.1</version>
+  <version>0.1.1</version>
   <description>A MongoDB based central store for data from a ROS system, eg. configurations, logged states, etc</description>
 
-  <maintainer email="cburbridge@gmail.com">chris burbridge</maintainer>
+  <maintainer email="cburbridge@gmail.com">Chris Curbridge</maintainer>
   <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
-  <author email="cburbridge@gmail.com">chris burbridge</author>
+  <author email="cburbridge@gmail.com">Chris Burbridge</author>
+  <author email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</author>
 
 
   <license>GPL</license>
@@ -19,7 +20,8 @@
   <build_depend>message_generation</build_depend>
   <build_depend>ros_datacentre_msgs</build_depend>
   <build_depend>rostest</build_depend>
-  
+  <build_depend>python-catkin-pkg</build_depend>
+
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
@@ -27,6 +29,6 @@
   <run_depend>ros_datacentre_msgs</run_depend>
   
   <export>
-
+	<rosdoc config="rosdoc.yaml"/>
   </export>
 </package>
