--- a/ros_datacentre_cpp_client/package.xml
+++ b/ros_datacentre_cpp_client/package.xml
@@ -44,6 +44,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>ros_datacentre_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
+  <build_depend>mongodb-dev</build_depend>
   <!-- <build_depend>pcl_ros</build_depend> -->
   <run_depend>geometry_msgs</run_depend>
   <run_depend>ros_datacentre_msgs</run_depend>
