Added test mode to mongodb_server.py
This generates a random port to listen on and creates a corresponding dbpath under /tmp. The port is tested to see if it's free before it's used.

This closes #77 and #75.

--- a/mongodb_store/CMakeLists.txt
+++ b/mongodb_store/CMakeLists.txt
@@ -141,5 +141,5 @@ endif()
 
 
 if (CATKIN_ENABLE_TESTING)
-  add_rostest(tests/messagestore.test)
+  add_rostest(tests/message_store.test)
 endif()
