--- a/mongodb_store_cpp_client/CMakeLists.txt
+++ b/mongodb_store_cpp_client/CMakeLists.txt
@@ -150,21 +150,7 @@ target_link_libraries(example_multi_event_log
   ${Boost_LIBRARIES}
 )
 
-# target_link_libraries(pc_test
-#    message_store
-#   mongoclient
-#   ${catkin_LIBRARIES}
-#   ${Boost_LIBRARIES}
-# )
 
-catkin_add_gtest(mongodb_store_cpp_test tests/mongodb_store_cpp_test.cpp)
-
-target_link_libraries(mongodb_store_cpp_test
-  message_store 
-  mongoclient
-  ${catkin_LIBRARIES}
-  ${Boost_LIBRARIES}
-)
 
 #############
 ## Install ##
@@ -194,3 +180,29 @@ install(DIRECTORY include/mongodb_store/
   PATTERN ".svn" EXCLUDE
 )
 
+
+## Add gtest based cpp test target and link libraries
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_mongodb_store.cpp)
+# if(TARGET ${PROJECT_NAME}-test)
+#   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
+# endif()
+
+## Add folders to be run by python nosetests
+# catkin_add_nosetests(unittests/test_messagestore.py)
+
+
+if (CATKIN_ENABLE_TESTING)
+  find_package(catkin REQUIRED COMPONENTS rostest)
+
+  add_executable(message_store_cpp_test tests/message_store_cpp_test.cpp)
+
+  target_link_libraries(message_store_cpp_test
+  message_store 
+  mongoclient
+  ${catkin_LIBRARIES}
+  ${Boost_LIBRARIES}
+  gtest
+)
+
+  add_rostest(tests/message_store_cpp_client.test)
+endif()
