--- a/mongodb_log/package.xml
+++ b/mongodb_log/package.xml
@@ -18,6 +18,7 @@
   <build_depend>tf</build_depend>
   <build_depend>sensor_msgs</build_depend>
   <build_depend>mongodb-dev</build_depend>
+  <build_depend>libssl-dev</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>roslib</run_depend>
