--- a/mongodb_store_cpp_client/package.xml
+++ b/mongodb_store_cpp_client/package.xml
@@ -31,6 +31,7 @@
   <build_depend>mongodb_store_msgs</build_depend>
   <build_depend>std_msgs</build_depend>
   <build_depend>mongodb-dev</build_depend>
+  <build_depend>libssl-dev</build_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>mongodb_store_msgs</run_depend>
   <run_depend>std_msgs</run_depend>
