--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -21,6 +21,7 @@
   <build_depend>mongodb_store_msgs</build_depend>
   <build_depend>rostest</build_depend>
   <build_depend>python-catkin-pkg</build_depend>
+  <build_depend>mongodb</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>std_msgs</run_depend>
