--- a/mongodb_log/package.xml
+++ b/mongodb_log/package.xml
@@ -19,6 +19,7 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>mongodb-dev</build_depend>
   <build_depend>libssl-dev</build_depend>
+  <build_depend>mongodb_store</build_depend>
 
   <run_depend>rospy</run_depend>
   <run_depend>roslib</run_depend>
@@ -28,6 +29,7 @@
   <run_depend>sensor_msgs</run_depend>
   <run_depend>mongodb-dev</run_depend>
   <run_depend>python-pymongo</run_depend>
+  <run_depend>mongodb_store</run_depend>
 
   <export>
   </export>
