--- a/libmongocxx_ros/package.xml
+++ b/libmongocxx_ros/package.xml
@@ -41,7 +41,12 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <buildtool_depend>scons</buildtool_depend>
-
+  <build_depend>libssl-dev</build_depend>
+  <build_depend>boost</build_depend>
+  <build_depend>roscpp</build_depend>
+  <run_depend>libssl-dev</run_depend>
+  <run_depend>boost</run_depend>
+  <run_depend>roscpp</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
