--- a/mongodb_store/package.xml
+++ b/mongodb_store/package.xml
@@ -4,8 +4,7 @@
   <version>0.3.6</version>
   <description>A package to support MongoDB-based storage and analysis for data from a ROS system, eg. saved messages, configurations etc</description>
 
-  <maintainer email="cburbridge@gmail.com">Chris Burbridge</maintainer>
-  <maintainer email="n.a.hawes@cs.bham.ac.uk">Nick Hawes</maintainer>
+  <maintainer email="nickh@robots.ox.ac.uk">Nick Hawes</maintainer>
   <author>Chris Burbridge</author>
   <author>Nick Hawes</author>
 
