--- a/mongodb_store/CMakeLists.txt
+++ b/mongodb_store/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(mongodb_store)
 
-# for ROS kinetic compile mongocxx with c++11 support
-if($ENV{ROS_DISTRO} STREQUAL "kinetic")
+# for ROS indigo compile without c++11 support
+if(NOT $ENV{ROS_DISTRO} STREQUAL "indigo")
   add_compile_options(-std=c++11)
 endif()
 
